@@ -17,8 +17,7 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.nio.charset.StandardCharsets;
-import java.util.ArrayList;
-import java.util.List;
+import java.util.Arrays;
 
 import static com.midominio.group.app.spring.repository.PreguntaSpecifications.*;
 
@@ -150,45 +149,60 @@ public class PreguntaSearchService {
 
     public int importarDesdeCSV(MultipartFile file) {
         if (file == null || file.isEmpty()) {
-            throw new RuntimeException("El archivo está vacío");
+            throw new RuntimeException("Archivo vacío");
         }
 
         int creadas = 0;
 
         try (BufferedReader reader = new BufferedReader(new InputStreamReader(file.getInputStream(), StandardCharsets.UTF_8))) {
             String line;
-            boolean primeraLinea = true;
+            boolean primera = true;
 
             while ((line = reader.readLine()) != null) {
-                if (primeraLinea) {
-                    primeraLinea = false;
+                if (primera) {
+                    primera = false;
                     continue;
                 }
 
-                if (line.trim().isEmpty()) {
-                    continue;
+                if (line.isBlank()) continue;
+
+                String[] data = line.split(";");
+
+                String tipo = data[0].trim();
+                String enunciado = data[1].trim();
+                String tematica = data[2].trim();
+
+                Pregunta pregunta;
+
+                switch (tipo) {
+                    case "VERDADERO_FALSO" -> {
+                        PreguntaVF p = new PreguntaVF();
+                        p.setRespuestaCorrecta(Boolean.parseBoolean(data[5].trim()));
+                        pregunta = p;
+                    }
+                    case "UNICA" -> {
+                        PreguntaUnica p = new PreguntaUnica();
+                        p.setOpciones(Arrays.stream(data[4].split("\\|")).map(String::trim).toList());
+                        p.setRespuestaCorrecta(Integer.parseInt(data[5].trim()));
+                        pregunta = p;
+                    }
+                    case "MULTIPLE" -> {
+                        PreguntaMultiple p = new PreguntaMultiple();
+                        p.setOpciones(Arrays.stream(data[4].split("\\|")).map(String::trim).toList());
+                        p.setRespuestasCorrectas(
+                                Arrays.stream(data[5].split(","))
+                                        .map(String::trim)
+                                        .map(Integer::parseInt)
+                                        .toList()
+                        );
+                        pregunta = p;
+                    }
+                    default -> throw new RuntimeException("Tipo no válido");
                 }
 
-                String[] data = line.split(";", -1);
-
-                String tipo = valor(data, 0);
-                String enunciado = valor(data, 1);
-                String tematica = valor(data, 2);
-
-                if (tipo == null || tipo.isEmpty()) {
-                    throw new RuntimeException("Tipo no válido");
-                }
-                if (enunciado == null || enunciado.isEmpty()) {
-                    throw new RuntimeException("Enunciado vacío");
-                }
-                if (tematica == null || tematica.isEmpty()) {
-                    throw new RuntimeException("Temática vacía");
-                }
-
-                Pregunta pregunta = crearPregunta(tipo, data);
                 pregunta.setEnunciado(enunciado);
                 pregunta.setTematica(tematica);
-                pregunta.setExplicacion(valor(data, 3));
+                pregunta.setExplicacion(data.length > 3 ? data[3].trim() : null);
 
                 preguntaRepository.save(pregunta);
                 creadas++;
@@ -196,93 +210,8 @@ public class PreguntaSearchService {
 
             return creadas;
         } catch (IOException e) {
-            throw new RuntimeException("Error procesando archivo", e);
+            throw new RuntimeException("Error leyendo archivo");
         }
-    }
-
-    private Pregunta crearPregunta(String tipo, String[] data) {
-        return switch (tipo) {
-            case "VERDADERO_FALSO" -> {
-                PreguntaVF preguntaVF = new PreguntaVF();
-                preguntaVF.setRespuestaCorrecta(parseBoolean(valor(data, 5)));
-                yield preguntaVF;
-            }
-            case "UNICA" -> {
-                PreguntaUnica preguntaUnica = new PreguntaUnica();
-                preguntaUnica.setOpciones(parseOpciones(valor(data, 4)));
-                preguntaUnica.setRespuestaCorrecta(parseIndiceUnico(valor(data, 5)));
-                yield preguntaUnica;
-            }
-            case "MULTIPLE" -> {
-                PreguntaMultiple preguntaMultiple = new PreguntaMultiple();
-                preguntaMultiple.setOpciones(parseOpciones(valor(data, 4)));
-                preguntaMultiple.setRespuestasCorrectas(parseIndicesMultiples(valor(data, 5)));
-                yield preguntaMultiple;
-            }
-            default -> throw new RuntimeException("Tipo de pregunta no soportado: " + tipo);
-        };
-    }
-
-    private String valor(String[] data, int indice) {
-        if (indice < 0 || indice >= data.length) {
-            return null;
-        }
-        String valor = data[indice];
-        return valor == null ? null : valor.trim();
-    }
-
-    private List<String> parseOpciones(String texto) {
-        List<String> opciones = new ArrayList<>();
-        if (texto == null || texto.isBlank()) {
-            return opciones;
-        }
-
-        String[] partes = texto.split("\\|");
-        for (String parte : partes) {
-            String limpia = parte == null ? null : parte.trim();
-            if (limpia != null && !limpia.isEmpty()) {
-                opciones.add(limpia);
-            }
-        }
-        return opciones;
-    }
-
-    private Integer parseIndiceUnico(String texto) {
-        if (texto == null || texto.isBlank()) {
-            return null;
-        }
-
-        String limpio = texto.split(";")[0].trim();
-        return Integer.parseInt(limpio);
-    }
-
-    private List<Integer> parseIndicesMultiples(String texto) {
-        List<Integer> respuestas = new ArrayList<>();
-        if (texto == null || texto.isBlank()) {
-            return respuestas;
-        }
-
-        String[] partes = texto.split(";");
-        for (String parte : partes) {
-            String limpia = parte == null ? null : parte.trim();
-            if (limpia != null && !limpia.isEmpty()) {
-                respuestas.add(Integer.parseInt(limpia));
-            }
-        }
-        return respuestas;
-    }
-
-    private Boolean parseBoolean(String texto) {
-        if (texto == null || texto.isBlank()) {
-            return null;
-        }
-
-        String valor = texto.trim().toLowerCase();
-        return switch (valor) {
-            case "true", "verdadero", "1", "v" -> true;
-            case "false", "falso", "0", "f" -> false;
-            default -> throw new RuntimeException("Valor booleano inválido: " + texto);
-        };
     }
 }
 
